移动端可以手动下一首

--- a/bootstrapTest/others/musicPlayer.html
+++ b/bootstrapTest/others/musicPlayer.html
@@ -104,7 +104,7 @@
             </div>
         </div>
         <script src="https://apps.bdimg.com/libs/jquery/2.1.4/jquery.min.js"></script>
-        <script src="./js/soundmanager2-nodebug-jsmin.js"></script>
+        <script src="./js/soundmanager2.js"></script>
         <script src="./js/music.js"></script>
     </body>
 </html>
