取消进度条 V1.0上线啦

--- a/bootstrapTest/others/musicPlayer.html
+++ b/bootstrapTest/others/musicPlayer.html
@@ -15,7 +15,7 @@
         <div class="songsListInfo"></div>
         <div id="player">
             <div class="player-card">
-                <h4>我的音乐播放器</h4>
+                <h4>音乐播放器 V1.0</h4>
                 <span class="player-toggle" title="更多功能" ontouchstart>
                     <div class="player-toggle-list">
                         <div class="player-list-icon" title="列表"></div>
