添加个人主页

--- a/bootstrapTest/IFE2017/IEF3.html
+++ b/bootstrapTest/IFE2017/IEF3.html
@@ -25,6 +25,7 @@
 	</style>
 </head>
 <body>
+	<P>插入1~200间的数字，然后可以点击排序进行可视化 请勿重复点击排序按钮</P>
 	<input type="number" id="info" value="">
 	<button id="leftIn">左侧入</button>
 	<button id="leftOut">左侧出</button>
