--- a/bootstrapTest/IFE2017/IEF4.html
+++ b/bootstrapTest/IFE2017/IEF4.html
@@ -26,6 +26,7 @@
 	</style>
 </head>
 <body>
+	<P>插入字符串 然后输入要搜索的字符串 点击搜索</P>
 	<textarea id="texts"></textarea>
 	<button id="search">搜索</button>
 	<button id="leftIn">左侧入</button>
