--- a/bootstrapTest/IFE2017/IEF6.html
+++ b/bootstrapTest/IFE2017/IEF6.html
@@ -26,6 +26,7 @@
 	</style>
 </head>
 <body>
+	<P>在黑色区域内右击</P>
 	<div id="parent" style="width: 1000px;height: 300px;background: #666">
 	</div>
 	<section class="memu" style="width: 150px">
