上传个人主页

--- a/bootstrapTest/others/look/look.html
+++ b/bootstrapTest/others/look/look.html
@@ -148,6 +148,7 @@
 			}
 		} 	
 	}
+	//文字居中 英文字符和中文字符
 	function getX(val){
 		let ocn=val.match(/[\u4E00-\u9FA5]/g);
 		let cn=ocn!=null?ocn.length:0;
