--- a/bootstrapTest/others/look/look.html
+++ b/bootstrapTest/others/look/look.html
@@ -124,7 +124,7 @@
 	const img=new Image();
 	var deg=0;
 	var load;
-	var srcs=["img.png","01.jpg","02.jpg","03.jpg"];
+	var srcs=["01.jpg","img.png","02.jpg","03.jpg"];
 	img.crossOrigin = "Anonymous";
 	const Cavans={
 		val:"你好",
