修改个人主页字体颜色

--- a/myInfo.html
+++ b/myInfo.html
@@ -18,7 +18,7 @@
             letter-spacing:1px;
         }
         strong{
-            color:#7A7A7A;
+            color:#7B68EE;
             font-size: 2rem;
         }
     </style>
@@ -120,10 +120,10 @@
                 <p>学习<strong>HTML5</strong>的<strong>canvas</strong>时我看到了一个很有意思的方法<strong>toDataURL</strong>，加上表情包泛滥
                    于是我写了一个<i><a target="_blank" href="https://zyzcss.github.io/bootstrapTest/others/look/look.html">表情包生成器</a></i>
                    ，当然功能很简单，顺带我也写了一个鼠标特效，运行在canvas上<i><a target="_blank" href="https://zyzcss.github.io/bootstrapTest/IFE2017/canvasAndVue.html">鼠标特效</a></i>，
-                  （在学习ES6的class后我重写了一遍，封装成了一个插件）。最近也在使用<strong>audio</strong>写东西，见<a target="_blank" href="https://zyzcss.github.io/bootstrapTest/others/musicPlayer.html" >音乐播放器</a>
+                  （在学习ES6的class后我重写了一遍，封装成了一个插件）。最近也在使用h5的<strong>audio</strong>写东西，见<a target="_blank" href="https://zyzcss.github.io/bootstrapTest/others/musicPlayer.html" >音乐播放器。</a>
                    在做音乐播放器的时候，我用媒体查询制作<strong>移动端</strong>的样式(改变边距，自适应尺寸，禁止缩放，rem字体)，也用js根据PC及移动端监听不同的事件(hover移动端失效 改用ontouchstart系列)
                 </p>
-                <p>学习<strong>CSS3</strong>的时候各种选择器让我枯燥不堪，还好<strong>transition</strong>以及<strong>animate</strong>让我打起了精神，
+                <p>学习<strong>CSS3</strong>的时候各种选择器让我枯燥不堪，还好<strong>transition</strong>以及<strong>animate</strong>让我打起了精神
                    ，也跟着百度IFE前端学院里的题目里做，练习见<strong>导航栏</strong> 。
                    学习<strong>JS</strong>是花费我时间最久的，我是阅读《JavaScript DOM编程艺术》入门，在百度IFE前端学院上手，
                    然后也相继阅读了《高性能JavaScript》,《JavaScript高级程序设计》等JS的书籍，当然更多的我只是囫囵吞枣，有些仅是了解和知道，
@@ -135,7 +135,7 @@
                    <strong>Webpack</strong>以及<strong>Parcel</strong>等打包工具的使用，<strong>YUI</strong>压缩工具的使用。
                    <br/>
                 </p>
-                   <h5>完</h5>
+                   <h4>完</h4>
 
                 </p>
             </div>
