修改个人主页字体颜色2

--- a/myInfo.html
+++ b/myInfo.html
@@ -12,6 +12,9 @@
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
     <title>我的个人主页</title>
     <style>
+        body{
+            font-family: "微软雅黑","黑体"
+        }
         P{
             font-size: 1.5rem;
             text-indent: 2rem;
@@ -20,6 +23,11 @@
         strong{
             color:#7B68EE;
             font-size: 2rem;
+        }
+        a{
+            color:#006400;
+            font-size: 1.5rem;
+            font-weight: bold;
         }
     </style>
 </head>
@@ -120,7 +128,7 @@
                 <p>学习<strong>HTML5</strong>的<strong>canvas</strong>时我看到了一个很有意思的方法<strong>toDataURL</strong>，加上表情包泛滥
                    于是我写了一个<i><a target="_blank" href="https://zyzcss.github.io/bootstrapTest/others/look/look.html">表情包生成器</a></i>
                    ，当然功能很简单，顺带我也写了一个鼠标特效，运行在canvas上<i><a target="_blank" href="https://zyzcss.github.io/bootstrapTest/IFE2017/canvasAndVue.html">鼠标特效</a></i>，
-                  （在学习ES6的class后我重写了一遍，封装成了一个插件）。最近也在使用h5的<strong>audio</strong>写东西，见<a target="_blank" href="https://zyzcss.github.io/bootstrapTest/others/musicPlayer.html" >音乐播放器。</a>
+                  （在学习ES6的class后我重写了一遍，封装成了一个插件）。最近也在使用h5的<strong>audio</strong>写东西，见<i><a target="_blank" href="https://zyzcss.github.io/bootstrapTest/others/musicPlayer.html">音乐播放器。</a></i>
                    在做音乐播放器的时候，我用媒体查询制作<strong>移动端</strong>的样式(改变边距，自适应尺寸，禁止缩放，rem字体)，也用js根据PC及移动端监听不同的事件(hover移动端失效 改用ontouchstart系列)
                 </p>
                 <p>学习<strong>CSS3</strong>的时候各种选择器让我枯燥不堪，还好<strong>transition</strong>以及<strong>animate</strong>让我打起了精神
