--- a/myInfo.html
+++ b/myInfo.html
@@ -50,7 +50,7 @@
                                     </a>
                                     <ul class="dropdown-menu">
                                         <li><p>CSS练习</p></li>
-                                        <li><a target="_blank" href="https://zyzcss.github.io/bootstrapTest/IFE2017/IEF-CSS1.html">流光字体</a></li>
+                                        <li><a target="_blank" href="https://zyzcss.github.io/bootstrapTest/IFE2017/IEF-CSS1.HTML">流光字体</a></li>
                                         <li><a target="_blank" href="https://zyzcss.github.io/bootstrapTest/IFE2017/IEF-CSS2.html">加载动画</a></li>
                                         <li><a target="_blank" href="https://zyzcss.github.io/bootstrapTest/IFE2017/IEF-CSS3.html">3D轮播</a></li>
                                         <li><a target="_blank" href="https://zyzcss.github.io/bootstrapTest/IFE2017/IEF1.html">圆角绘制</a></li>
