--- a/myInfo.html
+++ b/myInfo.html
@@ -108,7 +108,7 @@
                                         <li><a target="_blank" href="https://zyzcss.github.io/bootstrapTest/others/look/look.html">表情包生成器</a></li>
                                         <li><a target="_blank" href="https://zyzcss.github.io/ssh_demo/web/index.html">ssh框架及网站外观</a></li>
                                         <li><a target="_blank" href="http://www.azhouaa.cn/village/html/index.jsp">与同学一起制作的参赛网站</a></li>
-                                        <li><a target="_blank" href="https://github.com/zyzcss/jspC">springMVC,Vue编写的简单相册(代码)</a></li>
+                                        <li><a target="_blank" href="https://github.com/zyzcss/PictureList">springMVC,Vue编写的简单相册(代码)</a></li>
                                         <li><a target="_blank" href="https://github.com/zyzcss/Webpack4.X-install-Demo">Webpack4的安装与配置</a></li>
                                     </ul>
                                 </li>
@@ -135,9 +135,8 @@
                    ，也跟着百度IFE前端学院里的题目里做，练习见<strong>导航栏</strong> 。
                    学习<strong>JS</strong>是花费我时间最久的，我是阅读《JavaScript DOM编程艺术》入门，在百度IFE前端学院上手，
                    然后也相继阅读了《高性能JavaScript》,《JavaScript高级程序设计》等JS的书籍，当然更多的我只是囫囵吞枣，有些仅是了解和知道，
-                   并没有深入。学习完了基础后我开始学习一些框架，类似<strong>JQuery，San(百度研发的MVVM框架)，Vue</strong>等框架，其中JQuery是学习的最轻松的，封装了
-                   很多函数，让我用起来很是顺手，也最熟练。学习San和Vue之前，我先学习了<strong>ES6</strong>语法，
-                   了解了一些新特性。当然我对于San和Vue的理解并不深刻。
+                   并没有深入。学习完了基础后我开始学习一些框架，类似<strong>JQuery，San(百度研发的MVVM框架)，Vue</strong>等框架，其中JQuery是学习的最轻松和熟练的
+                   。学习San和Vue之前，我先学习了<strong>ES6</strong>语法，了解了一些新特，并开始书写ES6中的语法，慢慢改变从前的写法。
                 </p>
                 <p>我也掌握了一些与WEB相关的技能，例如<strong>SVG</strong>矢量图的制作，<strong>ps</strong>的基本操作。
                    <strong>Webpack</strong>以及<strong>Parcel</strong>等打包工具的使用，<strong>YUI</strong>压缩工具的使用。
