--- a/myInfo.html
+++ b/myInfo.html
@@ -20,7 +20,7 @@
             text-indent: 2rem;
             letter-spacing:1px;
         }
-        strong{
+        .container-my strong{
             color:#7B68EE;
             font-size: 2rem;
         }
@@ -49,14 +49,14 @@
                                         <b class="caret"></b>
                                     </a>
                                     <ul class="dropdown-menu">
-                                        <li><p>CSS练习</p></li>
+                                        <li><p><strong>CSS练习</strong></p></li>
                                         <li><a target="_blank" href="https://zyzcss.github.io/bootstrapTest/IFE2017/IEF-CSS1.HTML">流光字体</a></li>
                                         <li><a target="_blank" href="https://zyzcss.github.io/bootstrapTest/IFE2017/IEF-CSS2.html">加载动画</a></li>
                                         <li><a target="_blank" href="https://zyzcss.github.io/bootstrapTest/IFE2017/IEF-CSS3.html">3D轮播</a></li>
                                         <li><a target="_blank" href="https://zyzcss.github.io/bootstrapTest/IFE2017/IEF1.html">圆角绘制</a></li>
                                         <li><a target="_blank" href="https://zyzcss.github.io/bootstrapTest/IFE2017/IEF2.html">布局练习</a></li>
                                         <li class="divider"></li>
-                                        <li><p>JS练习</p></li>
+                                        <li><p><strong>JS练习</strong></p></li>
                                         <li><a target="_blank" href="https://zyzcss.github.io/bootstrapTest/IFE2017/IEF3.html">排序算法可视化</a></li>
                                         <li><a target="_blank" href="https://zyzcss.github.io/bootstrapTest/IFE2017/IEF4.html">正则搜索字符串</a></li>
                                         <li><a target="_blank" href="https://zyzcss.github.io/bootstrapTest/IFE2017/IEF5.html">会动的格子(初识flex布局)</a></li>
@@ -69,46 +69,42 @@
                                 </li>
                                 <li class="dropdown">
                                     <a target="_blank" href="#" class="dropdown-toggle" data-toggle="dropdown">
-                                        百度IFE2018(CSS部分)
+                                        百度IFE2018
                                         <b class="caret"></b>
                                     </a>
                                     <ul class="dropdown-menu">
+                                        <li><p><strong>CSS练习</strong></p></li>
                                         <li><a target="_blank" href="https://zyzcss.github.io/IFE-css/htmls/css-01.html">js触发过渡效果</a></li>
                                         <li><a target="_blank" href="https://zyzcss.github.io/IFE-css/htmls/css-03.html">会动的猫咪</a></li>
                                         <li><a target="_blank" href="https://zyzcss.github.io/IFE-css/htmls/css-04.html">hover翻转效果</a></li>
                                         <li><a target="_blank" href="https://zyzcss.github.io/IFE-css/htmls/css-05.html">hover3D立方体</a></li>
                                         <li><a target="_blank" href="https://zyzcss.github.io/IFE-css/htmls/css-06.html">全屏轮播图</a></li>
                                         <li><a target="_blank" href="https://zyzcss.github.io/IFE-css/htmls/css-07.html">手写登录窗口</a></li>
-                                    </ul>
-                                </li>
-                                <li class="dropdown">
-                                    <a target="_blank" href="#" class="dropdown-toggle" data-toggle="dropdown">
-                                        百度IFE2018(MVVM san部分)
-                                        <b class="caret"></b>
-                                    </a>
-                                    <ul class="dropdown-menu">
-                                        <li><a target="_blank" href="https://github.com/zyzcss/IFE2018">ES6写法的源码</a></li>
                                         <li class="divider"></li>
-                                        <li><a target="_blank" href="https://zyzcss.github.io/san/san-01.html">双向绑定</a></li>
-                                        <li><a target="_blank" href="https://zyzcss.github.io/san/san-02.html">条件和循环</a></li>
-                                        <li><a target="_blank" href="https://zyzcss.github.io/san/san-03.html">控制样式</a></li>
-                                        <li><a target="_blank" href="https://zyzcss.github.io/san/san-04.html">事件处理</a></li>
-                                        <li><a target="_blank" href="https://zyzcss.github.io/san/san-05.html">表单组件</a></li>
-                                        <li><a target="_blank" href="https://zyzcss.github.io/san/san-06.html">插槽相关</a></li>
-                                        <li><a target="_blank" href="https://zyzcss.github.io/san/san-08.html">过渡动画</a></li>
+                                        <li><p><strong>san(MVVM)</strong></p></li>
+                                            <li><a target="_blank" href="https://github.com/zyzcss/IFE2018">ES6写法的源码</a></li>
+                                            <li class="divider"></li>
+                                            <li><a target="_blank" href="https://zyzcss.github.io/san/san-01.html">双向绑定</a></li>
+                                            <li><a target="_blank" href="https://zyzcss.github.io/san/san-02.html">条件和循环</a></li>
+                                            <li><a target="_blank" href="https://zyzcss.github.io/san/san-03.html">控制样式</a></li>
+                                            <li><a target="_blank" href="https://zyzcss.github.io/san/san-04.html">事件处理</a></li>
+                                            <li><a target="_blank" href="https://zyzcss.github.io/san/san-05.html">表单组件</a></li>
+                                            <li><a target="_blank" href="https://zyzcss.github.io/san/san-06.html">插槽相关</a></li>
+                                            <li><a target="_blank" href="https://zyzcss.github.io/san/san-08.html">过渡动画</a></li>
                                     </ul>
                                 </li>
                                 <li class="dropdown">
                                     <a target="_blank" href="#" class="dropdown-toggle" data-toggle="dropdown">
-                                       其他小作品
+                                       项目及其他小作品
                                         <b class="caret"></b>
                                     </a>
                                     <ul class="dropdown-menu">
-                                        <li><a target="_blank" href="https://zyzcss.github.io/bootstrapTest/others/3DClound.html">3D标签云</a></li>
+                                        <li><a target="_blank" href="https://zyzcss.github.io/Vue/index.html#/list">Vue练习主页</a></li>
                                         <li><a target="_blank" href="https://zyzcss.github.io/bootstrapTest/others/look/look.html">表情包生成器</a></li>
                                         <li><a target="_blank" href="https://zyzcss.github.io/ssh_demo/web/index.html">ssh框架及网站外观</a></li>
                                         <li><a target="_blank" href="http://www.azhouaa.cn/village/html/index.jsp">与同学一起制作的参赛网站</a></li>
                                         <li><a target="_blank" href="https://github.com/zyzcss/PictureList">springMVC,Vue编写的简单相册(代码)</a></li>
+                                        <li><a target="_blank" href="https://zyzcss.github.io/bootstrapTest/others/3DClound.html">3D标签云</a></li>
                                         <li><a target="_blank" href="https://github.com/zyzcss/Webpack4.X-install-Demo">Webpack4的安装与配置</a></li>
                                     </ul>
                                 </li>
@@ -119,7 +115,7 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-md-10 col-md-offset-1">
+            <div class="col-md-10 col-md-offset-1 container-my">
                 <h1>一个前端菜鸟的个人主页</h1>
                 <h3>导航条上记录了我的各种小练习（只上传了关于WEB方面的）以下是我的介绍</h3>
                 <p>我学习的语言及顺序是<strong>VB,C,JAVA,C#,JS,</strong>JS是我最晚才接触的，却是我最钟意的语言。
