--- a/myInfo.html
+++ b/myInfo.html
@@ -99,7 +99,7 @@
                                         <b class="caret"></b>
                                     </a>
                                     <ul class="dropdown-menu">
-                                        <li><a target="_blank" href="https://zyzcss.github.io/Vue/index.html#/list">Vue练习主页</a></li>
+                                        <li><a target="_blank" href="https://zyzcss.github.io/Vue/index.html#/">Vue练习主页</a></li>
                                         <li><a target="_blank" href="https://zyzcss.github.io/bootstrapTest/others/look/look.html">表情包生成器</a></li>
                                         <li><a target="_blank" href="https://zyzcss.github.io/ssh_demo/web/index.html">ssh框架及网站外观</a></li>
                                         <li><a target="_blank" href="http://www.azhouaa.cn/village/html/index.jsp">与同学一起制作的参赛网站</a></li>
