--- a/myInfo.html
+++ b/myInfo.html
@@ -29,6 +29,11 @@
             font-size: 1.5rem;
             font-weight: bold;
         }
+        .new-add{
+            color:#1890ff;
+            font-size: 1.5rem;
+            font-weight: bold;
+        }
     </style>
 </head>
 <body>
@@ -106,6 +111,8 @@
                                         <li><a target="_blank" href="https://github.com/zyzcss/PictureList">springMVC,Vue编写的简单相册(代码)</a></li>
                                         <li><a target="_blank" href="https://zyzcss.github.io/bootstrapTest/others/3DClound.html">3D标签云</a></li>
                                         <li><a target="_blank" href="https://github.com/zyzcss/Webpack4.X-install-Demo">Webpack4的安装与配置</a></li>
+                                        <li><a target="_blank" href="https://zyzcss.github.io/React/react-demo1">React Demo</a></li>
+                                        <li><a target="_blank" href="http://www.zyzcss.xyz/">React+Node 博客网站</a></li>
                                     </ul>
                                 </li>
                             </ul>
@@ -136,6 +143,13 @@
                 </p>
                 <p>我也掌握了一些与WEB相关的技能，例如<strong>SVG</strong>矢量图的制作，<strong>ps</strong>的基本操作。
                    <strong>Webpack</strong>以及<strong>Parcel</strong>等打包工具的使用，<strong>YUI</strong>压缩工具的使用。
+                   <br/>
+                </p>
+                <p class="new-add">以下为2019.1.16更新：</p>
+                <p>经过了半年的学习，我已经能够熟练掌握<strong>React</strong>了，也在工作之余刷了一些<i><a target="_blank" href="https://leetcode-cn.com/zyzcss/">leetcode</a></i>,
+                    也从阿里云那里买了学生服务器做了一些<strong>Node</strong>的练习，期间写了一个在线聊天器的谷歌插件（未完成品），有时间会做完整理一下放出来。
+                    学习Node的时候也顺便看了一下数据库相关的知识，<strong>Mysql</strong>，<strong>Redis</strong>学习中。
+                    现在在写毕设中，假以时日<i><a target="_blank" href="http://www.zyzcss.xyz/">博客网站</a></i>就可以正常使用，我也会督促自己写一些博文纪录一下。
                    <br/>
                 </p>
                    <h4>完</h4>
