--- a/holidayCountdown/index.html
+++ b/holidayCountdown/index.html
@@ -158,7 +158,7 @@
       })
       // 指定时间
       tasks.push({
-        time: [dayjs('2020-8-12').startOf('day').add(18, 'hour').valueOf(), dayjs().endOf('year').valueOf()],
+        time: [dayjs('2020-8-12 00:00:00').startOf('day').add(18, 'hour').valueOf(), dayjs().endOf('year').valueOf()],
         text: '小葛跑路'
       })
     }
