--- a/holidayCountdown/index.html
+++ b/holidayCountdown/index.html
@@ -70,7 +70,7 @@
   <div id="wrap"></div>
   <div style="margin: 30px"></div>
   <div id="custom"></div>
-  <script src="https://unpkg.com/dayjs"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/dayjs/1.10.3/dayjs.min.js"></script>
   <script src="./holiday.js"></script>
   <link href="./picker.min.css" rel="stylesheet">
   <script src="./picker.min.js"></script>
