--- a/myInfo.html
+++ b/myInfo.html
@@ -152,6 +152,18 @@
                     现在在写毕设中，假以时日<i><a target="_blank" href="http://www.zyzcss.xyz/">博客网站</a></i>就可以正常使用，我也会督促自己写一些博文纪录一下。
                    <br/>
                 </p>
+                <p class="new-add">以下为2021.3.5更新：</p>
+                <p>仓库：<br />
+                    <strong>移动端调用摄像头扫描二维码</strong><a target="_blank" href="https://github.com/zyzcss/h5-scan">戳我查看</a><a style="margin-left:10px" target="_blank" href="https://github.com/zyzcss/scan/scan.html">Demo</a><br/>
+                     <strong>yapi 前端request代码生成器</strong><a target="_blank" href="https://github.com/zyzcss/yapi-auto-ts">戳我查看</a><br/>
+                    <strong>节假日api</strong><a target="_blank" href="https://github.com/zyzcss/HolidayCountdown">戳我查看</a><br/>
+                </p>
+                <p>
+                    小玩意：<br />
+                    <strong>节日/工作日倒计时</strong><a target="_blank" href="https://zyzcss.github.io/holidayCountdown/">戳我查看</a><br/>
+                    <strong>随机点菜器</strong><a target="_blank" href="https://zyzcss.github.io/foods/randomFood.html" >戳我查看</a><br/>
+                    
+                </p>
                    <h4>完</h4>
 
                 </p>
