--- a/myInfo.html
+++ b/myInfo.html
@@ -154,7 +154,7 @@
                 </p>
                 <p class="new-add">以下为2021.3.5更新：</p>
                 <p>仓库：<br />
-                    <strong>移动端调用摄像头扫描二维码</strong><a target="_blank" href="https://github.com/zyzcss/h5-scan">戳我查看</a><a style="margin-left:10px" target="_blank" href="https://github.com/zyzcss/scan/scan.html">Demo</a><br/>
+                    <strong>移动端调用摄像头扫描二维码</strong><a target="_blank" href="https://github.com/zyzcss/h5-scan">戳我查看</a><a style="margin-left:10px" target="_blank" href="/scan/scan.html">Demo（手机端）</a><br/>
                      <strong>yapi 前端request代码生成器</strong><a target="_blank" href="https://github.com/zyzcss/yapi-auto-ts">戳我查看</a><br/>
                     <strong>节假日api</strong><a target="_blank" href="https://github.com/zyzcss/HolidayCountdown">戳我查看</a><br/>
                 </p>
