--- a/holidayCountdown/index.html
+++ b/holidayCountdown/index.html
@@ -57,6 +57,17 @@
       justify-content: center;
       text-align: center;
     }
+    @media screen and (max-width: 600px) {
+        .setting {
+          font-size:20px
+        }
+        .input {
+          font-size:20px;
+        }
+        h4 {
+          font-size: 22px
+        }
+    }
   </style>
 </head>
 
