音乐播放器源从网易切换为本地

--- a/bootstrapTest/others/musicPlayer.html
+++ b/bootstrapTest/others/musicPlayer.html
@@ -16,11 +16,11 @@
         <div id="player">
             <div class="player-card">
                 <h4>音乐播放器 V1.0</h4>
-                <span class="player-toggle" title="更多功能" ontouchstart>
-                    <div class="player-toggle-list">
+                <span class="player-toggle" title="列表" ontouchstart>
+                    <!-- <div class="player-toggle-list">
                         <div class="player-list-icon" title="列表"></div>
                         <div class="player-search-icon" title="搜索"></div>
-                    </div>
+                    </div> -->
                 </span>
                 <div class="player-corver">
                     <img src="">
@@ -28,7 +28,7 @@
                 <div class="player-info">
                     <h2 class="player-info-music line-limit-length">加载中</h2>
                     <span class="player-info-singer line-limit-length">加载中</span>
-                    <span class="player-info-album line-limit-length">加载中</span>
+                    <span class="player-info-album line-limit-length"></span>
                 </div>
                 <div class="player-controls">
                     <div class="player-controls-sound">
