--- a/bootstrapTest/others/timer.html
+++ b/bootstrapTest/others/timer.html
@@ -42,6 +42,7 @@
 </head>
 <body>
 	<div id="timer"></div>
+	<input class="js_upFile cover1" type="file" name="cover" accept="image/*" capture="camera" multiple/>
 	<script type="text/javascript">
 		let a=[1,2,12,13,99,5];
 		console.log(a.sort(function(val1,val2){
